fix: scrollbar missing problem

--- a/src/Page/PageContent/EssayMarks/BrightSpot/BrightSpot.css
+++ b/src/Page/PageContent/EssayMarks/BrightSpot/BrightSpot.css
@@ -1,6 +1,7 @@
 .BrightSpot {
-  max-height: 100%;
+  max-height: 80%;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .BrightSpot::-webkit-scrollbar {
