--- a/src/Page/PageContent/EssayMarks/EssayMarks.css
+++ b/src/Page/PageContent/EssayMarks/EssayMarks.css
@@ -48,6 +48,7 @@
   border: 2px solid rgba(255, 255, 255, 0.8);
 }
 .EssayMarks__item__content {
+  height: 100%;
   margin-top: 25px;
   margin-left: 38px;
   margin-right: 38px;
