--- a/src/Page/PageContent/EssayMarks/ParagraphComment/ParagraphComment.css
+++ b/src/Page/PageContent/EssayMarks/ParagraphComment/ParagraphComment.css
@@ -1,6 +1,7 @@
 .ParagraphComment {
-  max-height: 100%;
+  max-height: 80%;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .ParagraphComment::-webkit-scrollbar {
