--- a/src/Page/PageContent/EssayMarks/SickExpression/SickExpression.css
+++ b/src/Page/PageContent/EssayMarks/SickExpression/SickExpression.css
@@ -1,5 +1,5 @@
 .SickExpression {
-  max-height: 100%;
+  max-height: 80%;
   overflow-y: auto;
 }
 
